# rag-chat

./: .gitignore  README.md  c4agents_as_tool.py  c4crypto_pricing_agent.py  c4deftool.py  c4mcp_tool.py  c4mortage.py  c4mortagereq.py  c4toolchoice.py  main.py  pyproject.toml
Slides/: 1 Introduction to AI Agents.pptx  2 Introduction to OpenAI Agents SDK.pptx  3 Environment Setup and Developing Your First Agent.pptx  4 Agent Tools and MCPs.pptx  8 Agent System Management.pptx
rag_pinecone/: chat.py  ingest_pdf.py  software-document.docx
