[project]
name = "uv-initiate"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
requires-python = ">=3.13"
dependencies = [
	"pinecone>=5.0.0",
	"pypdf>=5.0.0",
	"python-dotenv>=1.0.1",
	"google-genai>=0.9.0",
	"fastapi>=0.116.0",
	"pydantic>=2.12.0",
	"uvicorn>=0.35.0",
]
